views: undo refactor of BulletedView

This change broke the pre-Harmony layout of ExtensionInstallDialogView for
reasons that aren't yet clear. To avoid leaving trunk broken for long, undo the
refactor inside this dialog.

Bug: 771068
Change-Id: I0b553a0646381c9efad86be926c94ba5954ca3ad
Reviewed-on: https://chromium-review.googlesource.com/709656
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507974}
Former-commit-id: 911a32e7a20eee2afe2b92bcf9bce041f8b7c61f