chrome/browser/ui/views/extensions/extension_install_dialog_view.cc
@@ -26,7 +26,6 @@
 #include "chrome/browser/ui/browser.h"
 #include "chrome/browser/ui/browser_dialogs.h"
 #include "chrome/browser/ui/scoped_tabbed_browser_displayer.h"
-#include "chrome/browser/ui/views/harmony/bulleted_label_list_view.h"
 #include "chrome/browser/ui/views/harmony/chrome_layout_provider.h"
 #include "chrome/browser/ui/views/harmony/chrome_typography.h"
 #include "chrome/common/extensions/extension_constants.h"
@@ -61,6 +60,9 @@ using content::Referrer;
 using extensions::ExperienceSamplingEvent;
 
 namespace {
+
+// Width of the bullet column in BulletedView.
+constexpr int kBulletWidth = 20;
 
 // Size of extension icon in top left of dialog.
 constexpr int kIconSize = 64;
@@ -99,6 +101,15 @@ void AddResourceIcon(const gfx::ImageSkia* skia_image, void* data) {
   views::ImageView* image_view = new views::ImageView();
   image_view->SetImage(*skia_image);
   parent->AddChildView(image_view);
+}
+
+// Creates a string for displaying |message| to the user. If it has to look
+// like a entry in a bullet point list, one is added.
+base::string16 PrepareForDisplay(const base::string16& message,
+                                 bool bullet_point) {
+  return bullet_point ? l10n_util::GetStringFUTF16(
+                            IDS_EXTENSION_PERMISSION_LINE, message)
+                      : message;
 }
 
 void ShowExtensionInstallDialogImpl(
@@ -143,6 +154,20 @@ class CustomScrollableView : public views::View {
 };
 
 }  // namespace
+
+BulletedView::BulletedView(views::View* view) {
+  views::GridLayout* layout = views::GridLayout::CreateAndInstall(this);
+  views::ColumnSet* column_set = layout->AddColumnSet(0);
+  column_set->AddColumn(views::GridLayout::CENTER, views::GridLayout::LEADING,
+                        0, views::GridLayout::FIXED, kBulletWidth, 0);
+  column_set->AddColumn(views::GridLayout::LEADING, views::GridLayout::LEADING,
+                        0, views::GridLayout::USE_PREF,
+                        0,  // No fixed width.
+                        0);
+  layout->StartRow(0, 0);
+  layout->AddView(new views::Label(PrepareForDisplay(base::string16(), true)));
+  layout->AddView(view);
+}
 
 ExtensionInstallDialogView::ExtensionInstallDialogView(
     Profile* profile,
@@ -387,15 +412,20 @@ bool ExtensionInstallDialogView::AddPermissions(
   for (size_t i = 0; i < prompt_->GetPermissionCount(perm_type); ++i) {
     layout->AddPaddingRow(0, vertical_padding);
     layout->StartRow(0, column_set_id);
+    views::Label* permission_label =
+        new views::Label(prompt_->GetPermission(i, perm_type));
 
-    base::string16 permission_text = prompt_->GetPermission(i, perm_type);
-    layout->AddView(new BulletedLabelListView({permission_text}));
+    permission_label->SetMultiLine(true);
+    permission_label->SetHorizontalAlignment(gfx::ALIGN_LEFT);
+    permission_label->SizeToFit(left_column_width - kBulletWidth);
+    layout->AddView(new BulletedView(permission_label));
 
     // If we have more details to provide, show them in collapsed form.
     if (!prompt_->GetPermissionsDetails(i, perm_type).empty()) {
       layout->StartRow(0, column_set_id);
       PermissionDetails details;
-      details.push_back(prompt_->GetPermissionsDetails(i, perm_type));
+      details.push_back(PrepareForDisplay(
+          prompt_->GetPermissionsDetails(i, perm_type), false));
       ExpandableContainerView* details_container =
           new ExpandableContainerView(details, left_column_width, true);
       layout->AddView(details_container);
@@ -612,7 +642,8 @@ void ExpandableContainerView::DetailsView::AddDetail(
   layout_->StartRowWithPadding(0, 0, 0,
                                ChromeLayoutProvider::Get()->GetDistanceMetric(
                                    DISTANCE_RELATED_CONTROL_VERTICAL_SMALL));
-  views::Label* detail_label = new views::Label(detail);
+  views::Label* detail_label =
+      new views::Label(PrepareForDisplay(detail, false));
   detail_label->SetMultiLine(true);
   detail_label->SetHorizontalAlignment(gfx::ALIGN_LEFT);
   layout_->AddView(detail_label);
